# maie

./: .env.development  .env.development.template  .env.production.template  .env.template  .envrc  .gitignore  AGENTS.md  DIARIZATION_QUICK_REFERENCE.md  Dockerfile  FINAL_TODOS.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MAPREDUCE_FACT_CHECK.md  MAPREDUCE_IMPLEMENTATION_GUIDE.md  README.md  TDD_PROGRESS_REPORT.md  TEMPLATE_TRANSLATION_MAPPING.md  TRANSLATION_PLAN.md  TRANSLATION_STRATEGY_REVISED.md  VLLM_PERFORMANCE_ANALYSIS.md  WORKER_IMPLEMENTATION_PROGRESS.md  check_vllm_imports.py  codebase-cleanup-implementation.plan.md  debug_validation.py  docker-compose.yml  env.template  main.py  new_template.json  pyproject.toml  test_debug.py  test_whisper_words.py  translate.md  unused-code-analysis.md  update_template.json  upgrade.md  verify_schema.py  versions-before-20251117.txt
.gemini/: worker_kill_fix.md
assets/chat-templates/: qwen3_nonthinking.jinja
docs/: ANDROID_API_GUIDE.md  API_DATAFLOW.md  API_DOCUMENTATION_IMPROVEMENTS.md  API_REFERENCE.md  AUDIO_METRICS_REVIEW.md  Brief and MVP.md  CLIENT_DEVELOPER_GUIDE.md  CODEBASE_CLEANUP_ANALYSIS.md  DEVELOPER_API_WORKFLOW.md  DIARIZATION_INDEX.md  DIARIZATION_INTEGRATION_PLAN.md  DIARIZATION_OVERVIEW_AND_GUIDE.md  DIARIZATION_PROMPT_PACKAGING.md  DOCUMENTATION_UPDATE_SUMMARY.md  DUAL_ENDPOINT_IMPLEMENTATION_SUMMARY.md  E2E_TESTING_DOCKER.md  E2E_TESTING_GUIDE.md  E2E_TESTING_HYBRID_QUICKSTART.md  EDGE_DEPLOYMENT_PLAN.md  FIXES_COMPLETED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  JETSON_COMPATIBILITY_MATRIX.md  JETSON_EXECUTIVE_SUMMARY.md  JETSON_MIGRATION_PLAN.md  JETSON_QUICK_START.md  JETSON_README.md  LEGACY_CLEANUP_GUIDE.md  LLM_BACKEND_CONFIGURATION.md  LLM_HALLUCINATIONS.md  LLM_MIGRATION_DUAL_ENDPOINT.md  LLM_MODEL_WORKFLOW.md  LLM_PERSISTENCE_VLLM_SERVER_PLAN.md  LOGGING_RESTRUCTURE_PLAN.md  LOGURU_IMPLEMENTATION_SUMMARY.md  MEETING_MINUTES_SCHEMA_MIGRATION.md  MIGRATION_COMPLETE.md  NAMING_CONVENTION.md  PRD.md  PYANNOTE_4X_API_REFERENCE.md  (+19 more)
docs/vi/: DOCUMENTATION_INDEX.md  HUONG_DAN_DONG_GOP.md  HUONG_DAN_SU_DUNG.md  HUONG_DAN_VAN_HANH.md  PRD.md  README.md
examples/: README.md  demo_hallucination_filter.py  diagnose_llm_truncation.py  diariz.py  infer_asr_chunkformer.py  infer_asr_whisper.py  infer_diarization.py  infer_diarization_standalone.py  infer_diarization_test.py  infer_preprocess.py  infer_vad_whisper.py  infer_vllm.py  infer_vllm_safe.py  realriz.py  run_vietnamese_tests.py  test_enhancement_chat_template.py  test_extract_asr_transcript.py  test_llm_summarization.py  test_vllm.py  test_vllm_raw.py  test_vllm_simple.py  vllm_chat_api_simplified.py
scripts/: README.md  benchmark_maie_llm.py  benchmark_vllm_server.py  check_documentation_overlap.py  clean-all.sh  clean-audio.sh  clean-cache.sh  clean-logs.sh  convert_whisper_to_ct2.py  debug-enhanced-logging.sh  detect_dead_code.py  dev.sh  disk-monitor.sh  docker-build.sh  download-models.sh  kill_maie.sh  lint.sh  migrate_templates.py  process_manager.py  replace_prints_with_loguru.py  show-llm-config.py  start-scheduler.sh  start-vllm-server.sh  test-api.sh  test.sh  validate-e2e-results.py  validate-offline.sh  validate_imports.py  verify_prompts.py  verify_schema_load.py  vllm_server_config.py
scripts/fakebin/: pixi
src/: config.py
src/api/: dependencies.py  errors.py  main.py  middleware.py  routes.py  schemas.py
src/cleanup/: tasks.py
src/config/: __init__.py  __main__.py  base.py  development.py  llm_hallucinations.json  loader.py  logging.py  model.py  production.py  profiles.py  settings.py
src/core/: error_handler.py  error_tracker.py
src/processors/: __init__.py  async_base.py  base.py  llm.py
src/scheduler/: main.py
src/tooling/: __init__.py  llm_client.py  vllm_utils.py
src/utils/: __init__.py  asr_filters.py  config_validation.py  device.py  error_handling.py  json_utils.py  logging_utils.py  sanitization.py  template_manager.py  types.py  validation.py
src/worker/: __init__.py  main.py  pipeline.py  process_text_task_snippet.py
templates/: generic_summary_v1.json  interview_transcript_v1.json  meeting_notes_v1.json
templates/base/: structured_output_v1.jinja
templates/examples/: generic_summary_v1.example.json  generic_summary_v2.example.json  interview_transcript_v1.example.json  interview_transcript_v2.example.json  meeting_notes_v1.example.json
templates/generic_summary_en_v2/: example.json  prompt.jinja  schema.json
templates/generic_summary_v2/: example.json  prompt.jinja  schema.json
templates/interview_transcript_v2/: example.json  prompt.jinja  schema.json
templates/meeting_notes_v2/: example.json  prompt.jinja  schema.json
templates/prompts/: generic_summary_v1.jinja  generic_summary_v2.jinja  interview_transcript_v1.jinja  interview_transcript_v2.jinja  meeting_notes_v1.jinja  meeting_notes_v2.jinja  sample_prompts.md  text_enhancement_v1.jinja  text_enhancement_v2.jinja
templates/schemas/: generic_summary_v1.json  generic_summary_v2.json  interview_transcript_v1.json  interview_transcript_v2.json  meeting_notes_v1.json  meeting_notes_v2.json
templates/structured_analysis_v1/: README.md  example.json  prompt.jinja  schema.json
templates/text_enhancement_v1/: README.md  example.json  prompt.jinja  schema.json
tests/: conftest.py  env.test.example
tests/api/: test_dependencies.py  test_main.py  test_rate_limit.py  test_routes.py  test_routes_redis_integration.py  test_schemas.py  test_status_error_reporting.py  test_templates_crud.py
tests/cleanup/: __init__.py  test_tasks.py
tests/config/: __init__.py  test_cleanup_settings.py  test_config.py  test_settings_loader.py
tests/e2e/: README.md  conftest.py  test_core_workflow.py
tests/fixtures/: __init__.py  mock_factories.py
tests/integration/: test_chunkformer_intergration.py  test_enable_diarization_e2e.py  test_enhanced_logging_integration.py  test_llm_integration.py  test_llm_server_mode.py  test_prompt_templates.py  test_real_llm_integration.py  test_vad_pipeline.py  (+4 more)
(+97 files in other folders)
