[project]
name = "maie"
version = "0.1.0"
description = "Modular Audio Intelligence Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["soxr>=1.0.0,<2", "transformers>=4.57.1,<5", "flashinfer-cubin>=0.4.1,<0.5"]


[dependency-groups]
dev = ["pytest>=8.4.2,<9", "pytest-timeout>=2.4.0,<3","pytest-mock>=3.15.1,<4", "dead>=2.1.0,<3", "fakeredis>=2.32.0,<3",]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "integration: marks tests as integration tests (may require real libraries)",
    "slow: marks tests as slow (>5 seconds)",
    "gpu: marks tests as requiring GPU hardware",
    "real_llm: marks tests that make real LLM API calls (requires API keys)",
    "unit: marks tests as unit tests (fast, mocked)",
    "asyncio: marks tests as async tests",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 300
timeout_method = "thread"

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
ffmpeg = ">=8.0.0,<9"

[tool.pixi.pypi-dependencies]
maie = { path = ".", editable = true }
chunkformer = ">=1.2.1, <2"
litestar = { version = ">=2.18.0, <3", extras = ["standard"] }
vllm = ">=0.11.0, <0.12"
pydantic-settings = ">=2.11.0, <3"
redis = { version = ">=6.4.0, <7", extras = ["hiredis"] }
rq = ">=2.6.0, <3"
huggingface-hub = ">=0.35.3, <0.36"
loguru = ">=0.7.3, <0.8"
pydantic = ">=2.12.2, <3"
faster-whisper = ">=1.2.0, <2"
ctranslate2 = ">=4.6.0, <5"
torch = { version = "==2.8.0", index = "https://download.pytorch.org/whl/cu128" }
torchaudio = { version = "==2.8.0", index = "https://download.pytorch.org/whl/cu128" }
jsonschema = ">=4.25.1, <5"
python-Levenshtein = ">=0.27.1, <0.28"
flashinfer-python = ">=0.4.1, <0.5"
aiofiles = ">=25.1.0, <26"
flashinfer-jit-cache = {version = "*", index = "https://flashinfer.ai/whl/cu128"}

[tool.pixi.feature.dev.pypi-dependencies]
pytest-asyncio = ">=1.2.0, <2"
pytest-cov = ">=7.0.0, <8"
ruff = ">=0.14.0, <0.15"

[tool.pixi.feature.dev.tasks]
test = "pytest"
test-debug = "pytest -vv --tb=long --showlocals -ra -s"
lint = "ruff check --fix"
format = "ruff format"
api = "uvicorn src.api.main:app"
worker = "python src/worker/main.py"
style = "ruff check --fix && ruff format -v && dead"  # Combined formatting and linting
download-models = "bash scripts/download-models.sh"  # Keep existing bash script

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.activation.env]
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib/python3.12/site-packages/nvidia/cudnn/lib:$CONDA_PREFIX/lib/python3.12/site-packages/nvidia/cublas/lib:$CONDA_PREFIX/lib/python3.12/site-packages/nvidia/cuda_runtime/lib:$LD_LIBRARY_PATH"

